--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "evander-multivendor",
+  "name": "prime-importation",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -10,7 +10,7 @@
     "lint": "next lint",
     "generate:types": "payload generate:types",
     "db:fresh": "payload migrate:fresh",
-    "db:seed": "bun run src/seed.ts",
+    "db:seed": "bun run src/seed.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
@@ -44,8 +44,11 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@stripe/stripe-js": "^7.4.0",
     "@tanstack/react-query": "^5.80.10",
     "@trpc/client": "^11.4.2",
+    "@trpc/next": "^11.4.3",
+    "@trpc/react-query": "^11.4.3",
     "@trpc/server": "^11.4.2",
     "@trpc/tanstack-react-query": "^11.4.2",
     "class-variance-authority": "^0.7.1",
@@ -66,6 +69,7 @@
     "react-resizable-panels": "^3.0.3",
     "recharts": "^2.15.3",
     "sonner": "^2.0.5",
+    "stripe": "^18.2.1",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
     "zod": "^3.25.64"
