product search bar

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "next lint",
     "generate:types": "payload generate:types",
     "db:fresh": "payload migrate:fresh",
-    "db:seed": "bun run src/seed.ts"
+    "db:seed": "bun run src/seed.ts",
+    "db:seed-simple": "bun run src/simple-seed.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
